# qt.qgo-clipboard-client

./: CMakeLists.txt  Makefile  README.md  generate_examples.sh  generate_tests.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  png2ico.py
assets/: sources.qrc
backend/: clipboardApi.cpp  clipboardApi.h  config.h  config.h.in  httprequest.cpp  httprequest.h
cmake/: SparkAppimageConfig.cmake  SparkDesktopMacros.cmake  SparkFindQt5Config.cmake  SparkMacrosConfig.cmake  SparkMacrosExtendConfig.cmake  SparkWithGit.cmake  package-deb.descript  spark-deb-package.descript  spark-desktop.desktop.in  windows-deployqt.cmake
cmake/linux-install/: linux-install.cmake  qgo-clipboard-client.desktop
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/backend/: clipboardApi.cpp  clipboardApi.h
src/global/: config.h.in  global.cpp  global.h
src/utils/: Base64Image.cpp  configutil.cpp  configutil.h  fileutil.cpp  fileutil.h  httputil.cpp  httputil.h  pathutil.cpp  pathutil.h
src/view/: configdialog.cpp  configdialog.ui
tests/: CMakeLists.txt
tests/toutf8/: main.cpp
utils/: Base64Image.cpp
